# ololon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: collect.rs  db.rs  main.rs  model.rs  server.rs  trade.rs  train.rs  validate.rs
web/: .env.example  Dockerfile  README.md  components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  hooks.server.ts
web/src/lib/: api.ts  types.ts  utils.ts
web/src/lib/stores/: apiKey.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/features/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/trades/: +page.svelte
