[package]
name = "ololon"
version = "0.1.0"
edition = "2021"
description = "BTC/USDT 5-minute prediction trading bot with deep learning"
authors = ["ololon"]
license = "Proprietary - All rights reserved"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
ormlite = { version = "0.23", features = ["sqlite"] }

# Deep Learning - Burn framework
burn = { version = "0.16", features = ["ndarray", "train"] }
burn-ndarray = "0.16"

# WebSocket for Binance
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client for Polymarket API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptographic signing for Polymarket (EIP-712, HMAC)
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
async-trait = "0.1"
tokio-stream = "0.1"

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Numeric
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
ordered-float = { version = "5", features = ["serde"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
